# fiducials

aruco_detect/src/: aruco_detect.cpp
fiducial_slam/: CMakeLists.txt
fiducial_slam/cmake_modules/: FindG2O.cmake
fiducial_slam/include/fiducial_slam/: Fiducial.h  Observation.h  base_map.h  g2o_fiducial_map.h  g2o_fiducial_slam.h  map.h  types_slam2d.h
fiducial_slam/launch/: fiducial_slam.launch
fiducial_slam/scripts/: g2o_installation.sh
fiducial_slam/src/: Fiducial.cpp  Observation.cpp  base_map.cpp  fiducial_slam.cpp  g2o_fiducial_map.cpp  g2o_fiducial_slam.cpp  map.cpp
fiducial_slam/src/g2o_files/: edge_se2.cpp  parameter_se2_offset.cpp  types_slam2d.cpp  vertex_se2.cpp
